--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.10.5",
+    "@emotion/memoize": "^0.8.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
     "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
+    "babel-plugin-styled-components": "^2.0.7",
     "bootstrap": "^5.2.2",
     "jalali-moment": "^3.3.11",
     "next": "^12.3.1",
+    "next-transpile-modules": "^10.0.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.6.0",
@@ -29,10 +34,10 @@
     "react-qr-code": "^2.0.8",
     "react-select": "^5.4.0",
     "react-toastify": "^8.2.0",
-    "styled-components": "^5.3.5"
+    "stylis": "^4.1.3",
+    "stylis-plugin-rtl": "^2.1.1"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6"
   }
