--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-select": "^5.4.0",
     "react-toastify": "^8.2.0",
     "stylis": "^4.1.3",
-    "stylis-plugin-rtl": "^2.1.1"
+    "stylis-plugin-rtl": "^2.1.1",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
     "eslint": "8.18.0",
