--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
+    "@mui/x-data-grid": "^6.0.1",
     "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
     "babel-plugin-styled-components": "^2.0.7",
@@ -30,12 +31,14 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.2",
     "react-input-mask": "^2.0.4",
+    "react-is": "^18.2.0",
     "react-multi-date-picker": "^3.3.0",
     "react-qr-code": "^2.0.8",
     "react-select": "^5.4.0",
     "react-toastify": "^8.2.0",
     "stylis": "^4.1.3",
     "stylis-plugin-rtl": "^2.1.1",
+    "wretch": "^2.5.1",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
