--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-is": "^18.2.0",
     "react-multi-date-picker": "^3.3.0",
     "react-qr-code": "^2.0.8",
+    "react-query": "^3.39.3",
     "react-select": "^5.4.0",
     "react-toastify": "^8.2.0",
     "stylis": "^4.1.3",
