--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
+    "@mui/utils": "^5.11.13",
     "@mui/x-data-grid": "^6.0.1",
     "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
     "babel-plugin-styled-components": "^2.0.7",
     "bootstrap": "^5.2.2",
     "jalali-moment": "^3.3.11",
+    "moment": "^2.29.4",
     "next": "^12.3.1",
     "next-transpile-modules": "^10.0.0",
     "react": "^18.2.0",
