--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Metavers-ex",
-  "short_name": "Metaverse",
+  "name": "Belkacrypto-ex",
+  "short_name": "Belkacrypto",
   "theme_color": "#fd961a",
   "background_color": "#fd961a",
   "display": "fullscreen",
