--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "zustand": "^4.3.6"
   },
   "devDependencies": {
+    "@types/node": "20.2.1",
     "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "typescript": "5.0.4"
   }
 }
