--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jalali-moment": "^3.3.11",
     "moment": "^2.29.4",
     "next": "^12.3.1",
+    "next-auth": "^4.22.1",
     "next-transpile-modules": "^10.0.0",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
