--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/memoize": "^0.8.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mantine/hooks": "^6.0.13",
     "@mui/icons-material": "^5.11.11",
     "@mui/lab": "^5.0.0-alpha.124",
     "@mui/material": "^5.11.12",
